[tool.poetry]
name = "diag_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aioisotp = { git = "https://github.com/christiansandberg/aioisotp.git" }
udsoncan = "^1.13.1"
can-isotp = "^1.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
